# gam200-gl-test

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  imgui.ini  run_and_build.sh
.cache/clangd/index/: imconfig.h.A792806E91710B42.idx  imgui.cpp.6D20155E816F5950.idx  imgui.h.FB04BABDEC7BBDA5.idx  imgui_demo.cpp.7F77E5A757A785FB.idx  imgui_impl_glfw.cpp.A51353FB66BF42FA.idx  imgui_impl_glfw.h.3CB32F16BC3176BC.idx  imgui_impl_opengl3.h.14B6C754B402ACCA.idx  imgui_tables.cpp.D689F8623825C306.idx  imgui_widgets.cpp.6FC5C82FB897C811.idx  main.cpp.D445B67917DC4142.idx
Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json  gaming-gl
Debug/.cache/clangd/index/: imgui.cpp.6D20155E816F5950.idx  imgui_demo.cpp.7F77E5A757A785FB.idx  imgui_draw.cpp.314114A50D2A1BD6.idx  imgui_impl_glfw.cpp.A51353FB66BF42FA.idx  imgui_impl_glfw.h.3CB32F16BC3176BC.idx  imgui_impl_opengl3.cpp.FF71AF7C3B7F2D03.idx  imgui_impl_opengl3_loader.h.1F62190AEF6C6D61.idx  imgui_internal.h.4FAFC548D4A82CBE.idx  imgui_tables.cpp.D689F8623825C306.idx  imgui_widgets.cpp.6FC5C82FB897C811.idx  imstb_rectpack.h.FB35B8EDABF20E21.idx  imstb_textedit.h.9F467BE9BAB352DF.idx  imstb_truetype.h.E1BE5DE3E22283CB.idx  main.cpp.D445B67917DC4142.idx
Debug/.cmake/api/v1/reply/: codemodel-v2-d07c75d795c7fe1420d8.json  index-2024-04-10T08-20-53-0124.json  target-gaming-gl-Debug-58441906063b35e1d651.json
src/: main.cpp  preamble.hpp
src/engine/: CMakeLists.txt  Engine.cpp  Engine.hpp
